<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    android:fillViewport="true"
    tools:context=".ui.useradmission.LogInFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical" >


        <FrameLayout
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <ProgressBar
                android:id="@+id/progress_circular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:indeterminate="true"
                android:indeterminateTint="@color/Brown_400"
                android:indeterminateTintMode="src_atop"
                android:visibility="gone" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/LogInLogoImg"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:src="@drawable/logo"
                    app:srcCompat="@drawable/logo" />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/InputEditTextCustomStyle.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_xlarge"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_marginRight="@dimen/margin_xlarge"
                    android:hint="@string/email"
                    android:maxLines="1"
                    app:boxStrokeColor="@color/Brown_400"
                    app:errorEnabled="true"
                    app:hintTextColor="@color/Brown_400"
                    app:startIconDrawable="@drawable/ic_baseline_email_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/logInEmailTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/InputEditTextCustomStyle.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_xlarge"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_marginRight="@dimen/margin_xlarge"
                    android:hint="@string/password"
                    android:maxLines="1"
                    app:boxStrokeColor="@color/Brown_400"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    app:hintTextColor="@color/Brown_400"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginInPasswordTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/logInBtn"
                    style="@style/CustomButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_xlarge"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_marginRight="@dimen/margin_xlarge"
                    android:text="@string/login"
                    app:backgroundTint="@color/Brown_400" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="Don't have an account " />

                    <TextView
                        android:id="@+id/sigInTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signup"
                        android:textColor="@color/Coffee_200"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </FrameLayout>
    </ScrollView>
</RelativeLayout>