<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.useradmission.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/LogInLogoImg"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerInside"
                android:src="@drawable/logo" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputEditTextCustomStyle.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_xlarge"
                android:layout_marginRight="@dimen/margin_xlarge"
                android:hint="@string/first_name"
                android:maxLines="1"
                app:boxStrokeColor="@color/Brown_400"
                app:hintTextColor="@color/Brown_400"
                app:startIconDrawable="@drawable/ic_baseline_person_pin_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signInFNameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputEditTextCustomStyle.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_xlarge"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_xlarge"
                android:hint="Last Name"
                android:maxLines="1"
                app:boxStrokeColor="@color/Brown_400"
                app:hintTextColor="@color/Brown_400"
                app:startIconDrawable="@drawable/ic_baseline_person_pin_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signInLNameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputEditTextCustomStyle.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_xlarge"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_xlarge"
                android:hint="@string/email"
                android:maxLines="1"
                app:boxStrokeColor="@color/Brown_400"
                app:hintTextColor="@color/Brown_400"
                app:startIconDrawable="@drawable/ic_baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/logInEmailTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputEditTextCustomStyle.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_xlarge"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_xlarge"
                android:hint="@string/password"
                android:maxLines="1"
                app:boxStrokeColor="@color/Brown_400"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/Brown_400"
                app:startIconDrawable="@drawable/ic_baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginInPasswordTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputEditTextCustomStyle.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_xlarge"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_xlarge"
                android:hint="@string/phone_number"
                android:maxLines="1"
                app:boxStrokeColor="@color/Brown_400"
                app:hintTextColor="@color/Brown_400"
                app:startIconDrawable="@drawable/ic_baseline_local_phone_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signInPhoneTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/SignInBtn"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_xlarge"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_xlarge"
                android:padding="16dp"
                android:text="@string/login"
                app:backgroundTint="@color/Brown_400" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Already have an account " />

                <TextView
                    android:id="@+id/logInTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="LogIn "
                    android:textColor="@color/Coffee_200"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</FrameLayout>