<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditUser">

    <FrameLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ExtraText">
        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:indeterminate="true"
            android:indeterminateTint="@color/Brown_400"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profilePic"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="@dimen/margin_xlarge"
                android:padding="5dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                app:strokeColor="@color/Coffee_200"
                app:strokeWidth="2dp" />



            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputEditTextCustomStyle.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_xlarge"
                android:layout_marginRight="@dimen/margin_xlarge"
                android:hint="@string/first_name"
                android:maxLines="1"
                app:boxStrokeColor="@color/Brown_400"
                app:hintTextColor="@color/Brown_400"
                app:startIconDrawable="@drawable/ic_baseline_person_pin_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/updateFNameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputEditTextCustomStyle.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_xlarge"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_xlarge"
                android:hint="Last Name"
                android:maxLines="1"
                app:boxStrokeColor="@color/Brown_400"
                app:hintTextColor="@color/Brown_400"
                app:startIconDrawable="@drawable/ic_baseline_person_pin_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/updateLNameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputEditTextCustomStyle.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_xlarge"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_xlarge"
                android:hint="@string/password"
                android:maxLines="1"
                app:boxStrokeColor="@color/Brown_400"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/Brown_400"
                app:startIconDrawable="@drawable/ic_baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/updatePasswordTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputEditTextCustomStyle.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_xlarge"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_xlarge"
                android:hint="@string/phone_number"
                android:maxLines="1"
                app:boxStrokeColor="@color/Brown_400"
                app:hintTextColor="@color/Brown_400"
                app:startIconDrawable="@drawable/ic_baseline_local_phone_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/updatePhoneTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/updateBtn"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_xlarge"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:layout_marginRight="@dimen/margin_xlarge"
                android:padding="16dp"
                android:text="@string/update"
                app:backgroundTint="@color/Brown_400" />



        </androidx.appcompat.widget.LinearLayoutCompat>

    </FrameLayout>




</ScrollView>

